改变js和css的相对位置

--- a/core/index.html
+++ b/core/index.html
@@ -21,8 +21,8 @@
       s.parentNode.insertBefore(hm, s);
     })();
 </script>
-  <script type="module" crossorigin src="/assets/index.567108d1.js"></script>
-  <link rel="stylesheet" href="/assets/index.68e364d2.css">
+  <script type="module" crossorigin src="assets/index.567108d1.js"></script>
+  <link rel="stylesheet" href="assets/index.68e364d2.css">
 </head>
 
 <body>
