--- a/core/index.html
+++ b/core/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg" href="/assets/logo.c2a113ec.svg" />
+  <link rel="icon" type="image/svg" href="assets/logo.c2a113ec.svg" />
   <title>Numerical Playground By BirdSong</title>
   <script>
     // process shim for old versions of @vue/compiler-sfc dependency
